--- a/mavis-frontend/public/index.html
+++ b/mavis-frontend/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    
     <title>Mavis</title>
   </head>
   <body>
